# SxKernelSU

./: CHANGELOG.md  CHANGELOG_CN.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile  repack_apk.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: build-lkm.yml  build-manager.yml  clippy.yml  ddk-lkm.yml  release.yml  shellcheck.yml  sksud-extra.yml  sksud.yml  sksuinit.yml
docs/: README.md  README_CN.md  README_ES.md  README_ID.md  README_IN.md  README_IT.md  README_IW.md  README_JP.md  README_KR.md  README_PL.md  README_PT-BR.md  README_RU.md  README_TR.md  README_TW.md  README_VI.md
js/: README.md  package.json
kernel/: .gitignore  Kbuild  Kconfig  Makefile  build-all.sh  setup.sh
kernel/core/: init.c
kernel/feature/: adb_root.c  adb_root.h  fs_hide.c  fs_hide.h  hook_protect.c  hook_protect.h  kernel_umount.c  kernel_umount.h  mem_hide.c  mem_hide.h  module_hide.c  module_hide.h  process_hide.c  process_hide.h  selinux_hide.c  selinux_hide.h  sucompat.c  sucompat.h  sulog.c  sulog.h  timing_hide.c  timing_hide.h
kernel/ghost/: ghost.h  ghost_bis.c  ghost_core.c  ghost_ctc.c  ghost_kmf.c  ghost_sst.c  ghost_tde.c  ghost_tvfs.c
kernel/hook/: lsm_hook.c  lsm_hook.h  patch_memory.h  setuid_hook.c  setuid_hook.h  syscall_event_bridge.c  syscall_event_bridge.h  syscall_hook.h  syscall_hook_manager.c  syscall_hook_manager.h  tp_marker.c  tp_marker.h
kernel/include/: arch.h  klog.h  sksu.h  util.h
manager/: settings.gradle.kts
scripts/: allowlist.bt
uapi/: supercall.h
website/: netlify.toml  package.json
(+574 files in other folders)
