[workspace]
members = [
    "userspace/sksud",
    "userspace/sksuinit",
]
default-members = [
    "userspace/sksud",
    "userspace/sksuinit",
]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1"
log = "0.4"

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"

[profile.release.package.sksud]
codegen-units = 1
